[package]
name = "pub-sub-client"
version = "0.10.1-alpha.0"
edition = "2021"
rust-version = "1.58"

description = "Google Cloud Pub/Sub client library"
authors = ["Heiko Seeberger <mail@heikoseeberger.rocks>"]
license-file = "LICENSE"
readme = "README.md"
homepage = "https://github.com/hseeberger/pub-sub-client"
repository = "https://github.com/hseeberger/pub-sub-client"
documentation = "https://github.com/hseeberger/pub-sub-client"

[features]
default = ["reqwest/default-tls"]
derive = ["pub-sub-client-derive"]
vendored-ssl = [
    "goauth/vendored-ssl",
    "reqwest/native-tls-vendored",
    "smpl_jwt/vendored",
]

[dependencies]
pub-sub-client-derive = { version = "=0.10.1-alpha.0", optional = true, path = "../pub-sub-client-derive" }
base64 = "0.13"
goauth = { version = "0.13", default-features = false }
reqwest = { version = "0.11", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
smpl_jwt = { version = "0.7", default-features = false }
thiserror = "1.0"
time = { version = "0.3", features = ["serde-well-known"] }
tracing = "0.1"

[dev-dependencies]
anyhow = "1.0"
# TODO use published package once Pub/Sub has been included
testcontainers = { git = "https://github.com/testcontainers/testcontainers-rs", branch = "dev" }
